--- a/myproject/fileupload/templates/fileupload/home.html
+++ b/myproject/fileupload/templates/fileupload/home.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Upload</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h1>File Upload</h1>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Upload</button>
-    </form>
-    <h2>Uploaded Files</h2>
-    <ul>
-        {% for file in files %}
-            <li>
-                <a href="{{ file.file.url }}">{{ file.title }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+<body style="background-color: pink;">
+    <div id="sectionupload" class="container d-flex flex-column justify-content-center align-items-center vh-100">
+        <div class="upload-container w-50">
+            <h1 class="text-center mb-4" style="color: #007bff;">Upload your files</h1>
+            <form method="post" style="border:5px solid red" enctype="multipart/form-data" class = 'card p-3 bg-light'>
+                {% csrf_token %}
+                <div class="mb-3">
+                    {{ form.as_p }}
+                </div>
+                <div class="d-grid gap-2">
+                    <button type="submit" class="btn btn-secondary" style="background-color: yellow; border-color: #28a745;">Upload</button>
+                </div>
+            </form>
+        </div>
+        <h2 class="mt-5" style="color: black;">Uploaded Files</h2>
+        <ul class="list-group w-50">
+            {% for file in files %}
+                <li class="list-group-item">
+                    <a href="{{ file.file.url }}" style="text-decoration: underline; color: red;">{{ file.title }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
